--- a/victimas/templates/template.html
+++ b/victimas/templates/template.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-<html>
+<html lang="es">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,7 +42,7 @@
                             <li><a href="{% url 'beneficiario:datosBasicos' %}"><i class="fa fa-user-plus"></i> Crear Beneficiario</a></li>
                             <li><a href="/beneficiario/generaCarnet"><i class="fa fa-users"></i> Carnetización Sisben</a></li>
                             <li><a href="#"><i class="fa fa-upload" aria-hidden="true"></i> Subir Documentos</a></li>
-                            <li><a href="/informes/informeVca"><i class="fa fa-bar-chart"></i> Informes</a></li>
+                            <li><a href="/informes/informes"><i class="fa fa-bar-chart"></i> Informes</a></li>
                         </ul>
                     </div>
                 </div>
